Linked all the pages

--- a/index.html
+++ b/index.html
@@ -1448,30 +1448,30 @@
           <ul class="social-list">
 
             <li>
-              <a href="#" class="social-link">
+                <a href="https://twitter.com/theasperteam?lang=en" class="social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
 
                 <span class="span">Twitter</span>
-              </a>
+                </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+                <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link">
                 <ion-icon name="logo-linkedin"></ion-icon>
 
                 <span class="span">LinkedIn</span>
-              </a>
+                </a>
             </li>
 
             <li>
-              <a href="#" class="social-link">
+                <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link">
                 <ion-icon name="logo-instagram"></ion-icon>
 
                 <span class="span">Instagram</span>
-              </a>
+                </a>
             </li>
 
-          </ul>
+            </ul>
 
         </div>
 
@@ -1479,9 +1479,6 @@
 
     </div>
   </footer>
-
-
-
 
 
   <!-- 
