--- a/profile.html
+++ b/profile.html
@@ -13,6 +13,7 @@
     - custom css link
     -->
     <link rel="stylesheet" href="./css/profile.css">
+    <link rel="stylesheet" href="./css/style.css">
     
 
     <!--
@@ -25,6 +26,97 @@
 </head>
 
 <body>
+
+    <!-- 
+    - #HEADER
+    -->
+
+    <header class="header" data-header>
+    <div class="container">
+
+        <a href="#" class="logo">
+        <img src="Assets/images/logo.png" width="30" height="10" alt="logo">
+        </a>
+
+        <nav class="navbar" data-navbar>
+
+        <div class="navbar-top">
+            <a href="#" class="logo">
+            <img src="Assets/images/logo.png" width="119" height="37" alt="logo">
+            </a>
+
+            <button class="nav-close-btn" aria-label="close menu" data-nav-toggler>
+            <ion-icon name="close-outline" aria-hidden="true"></ion-icon>
+            </button>
+        </div>
+
+        <ul class="navbar-list">
+
+            <li>
+            <a href="#home" class="navbar-link hover-1" data-nav-toggler>Home</a>
+            </li>
+
+            <li>
+            <a href="#categories" class="navbar-link hover-1" data-nav-toggler>Categories</a>
+            </li>
+
+            <li>
+            <a href="#featured" class="navbar-link hover-1" data-nav-toggler>Featured Blogs</a>
+            </li>
+
+            <li>
+            <a href="profile.html" class="navbar-link hover-1" data-nav-toggler>Profile</a>
+            </li>
+
+        </ul>
+
+        <div class="navbar-bottom">
+
+            <div class="profile-card">
+            <img src="Assets/images/author-1.png" width="48" height="48" alt="Steven" class="profile-banner">
+            </div>
+
+            <ul class="link-list">
+
+            <li>
+                <a href="#" class="navbar-bottom-link hover-1">Profile</a>
+            </li>
+
+            <li>
+                <a href="#" class="navbar-bottom-link hover-1">Articles Saved</a>
+            </li>
+
+            <li>
+                <a href="#" class="navbar-bottom-link hover-1">Add New Post</a>
+            </li>
+
+            <li>
+                <a href="#" class="navbar-bottom-link hover-1">My Likes</a>
+            </li>
+
+            <li>
+                <a href="#" class="navbar-bottom-link hover-1">Account Setting</a>
+            </li>
+
+            <li>
+                <a href="#" class="navbar-bottom-link hover-1">Sign Out</a>
+            </li>
+
+            </ul>
+
+        </div>
+
+        </nav>
+
+        <a href="login.html" class="btn btn-primary">Login</a>
+
+        <button class="nav-open-btn" aria-label="open menu" data-nav-toggler>
+        <ion-icon name="menu-outline" aria-hidden="true"></ion-icon>
+        </button>
+        
+    </div>
+    </header>
+
 
 
 
@@ -161,29 +253,25 @@
     - #NAVBAR
     -->
 
-            <nav class="navbar">
+            <nav class="navbar1">
 
-                <ul class="navbar-list">
+                <ul class="navbar1-list">
 
-                    <li class="navbar-item">
-                        <button class="navbar-link  active" data-nav-link>About</button>
+                    <li class="navbar1-item">
+                        <button class="navbar1-link  active" data-nav-link>About</button>
                     </li>
 
-                    <li class="navbar-item">
-                        <button class="navbar-link" data-nav-link>Blog</button>
+                    <li class="navbar1-item">
+                        <button class="navbar1-link" data-nav-link>Blog</button>
                     </li>
 
-                    <li class="navbar-item">
-                        <button class="navbar-link" data-nav-link>Contact</button>
+                    <li class="navbar1-item">
+                        <button class="navbar1-link" data-nav-link>Contact</button>
                     </li>
 
                 </ul>
 
             </nav>
-
-
-
-
 
     <!--
     - #ABOUT
@@ -291,9 +379,9 @@
                 </section>
 
 
-                <!--
-          - testimonials
-        -->
+            <!--
+        - testimonials
+    -->
 
                 <section class="testimonials">
 
@@ -406,9 +494,9 @@
                 </section>
 
 
-                <!--
-          - testimonials modal
-        -->
+            <!--
+        - testimonials modal
+    -->
 
                 <div class="modal-container" data-modal-container>
 
@@ -453,9 +541,9 @@
                 </div>
 
 
-                <!--
-          - clients
-        -->
+            <!--
+        - clients
+    -->
 
                 <section class="clients">
 
@@ -505,9 +593,9 @@
 
             </article>
 
-            <!--
-        <!-- - #PORTFOLIO
-      -->
+        <!--
+        #PORTFOLIO
+    -->
 
             <article class="new-blog" data-page="new-blog">
 
@@ -742,12 +830,9 @@
             </article>
 
 
-            -->
-
-
-            <!--
-        - #BLOG
-      -->
+        <!--
+    - #BLOG
+    -->
 
             <article class="blog" data-page="blog">
 
@@ -944,9 +1029,9 @@
 
 
 
-            <!--
-        - #CONTACT
-      -->
+        <!--
+    - #CONTACT
+    -->
 
             <article class="contact" data-page="contact">
 
@@ -987,16 +1072,170 @@
                     </form>
 
                 </section>
-
             </article>
+        </div>
+    </main>
+
+    <!-- 
+    - #FOOTER
+    -->
+
+    <footer>
+    <div class="container">
+
+        <div class="card footer">
+
+        <div class="section footer-top">
+
+            <div class="footer-brand">
+
+            <a href="#" class="logo">
+                <img src="Assets/images/logo.png" width="119" height="37" loading="lazy" alt="Wren logo">
+            </a>
+
+            <p class="footer-text">
+                When an unknown prnoto sans took a galley and scrambled it to make specimen book not only five When an
+                unknown prnoto sans took a galley and scrambled it to five centurie.
+            </p>
+
+            <p class="footer-list-title">Address</p>
+
+            <address class="footer-text address">
+                123 Main Street <br>
+                New York, NY 10001
+            </address>
+
+            </div>
+
+            <div class="footer-list">
+
+            <p class="footer-list-title">Categories</p>
+
+            <ul>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Action</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Business</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Adventure</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Canada</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">America</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Curiosity</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Animal</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Dental</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Biology</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Design</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Breakfast</a>
+                </li>
+
+                <li>
+                <a href="#" class="footer-link hover-2">Dessert</a>
+                </li>
+
+            </ul>
+
+            </div>
+
+            <div class="footer-list">
+
+            <p class="footer-list-title">Newsletter</p>
+
+            <p class="footer-text">
+                Sign up to be first to receive the latest stories inspiring us, case studies, and industry news.
+            </p>
+
+            <div class="input-wrapper">
+                <input type="text" name="name" placeholder="Your name" required class="input-field" autocomplete="off">
+
+                <ion-icon name="person-outline" aria-hidden="true"></ion-icon>
+            </div>
+
+            <div class="input-wrapper">
+                <input type="email" name="email_address" placeholder="Emaill address" required class="input-field"
+                autocomplete="off">
+
+                <ion-icon name="mail-outline" aria-hidden="true"></ion-icon>
+            </div>
+
+            <a href="#" class="btn btn-primary">
+                <span class="span">Subscribe</span>
+
+                <ion-icon name="arrow-forward" aria-hidden="true"></ion-icon>
+            </a>
+
+            </div>
 
         </div>
 
-    </main>
+        <div class="footer-bottom">
 
+            <p class="copyright">
+            &copy; Developed with ❤️ by <a href="#" class="copyright-link">Asperians</a>
+            </p>
 
+            <ul class="social-list">
 
+            <li>
+                <a href="https://twitter.com/theasperteam?lang=en" class="social-link">
+                <ion-icon name="logo-twitter"></ion-icon>
 
+                <span class="span">Twitter</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link">
+                <ion-icon name="logo-linkedin"></ion-icon>
+
+                <span class="span">LinkedIn</span>
+                </a>
+            </li>
+
+            <li>
+                <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link">
+                <ion-icon name="logo-instagram"></ion-icon>
+
+                <span class="span">Instagram</span>
+                </a>
+            </li>
+
+            </ul>
+
+        </div>
+
+    </div>
+
+    </div>
+    </footer>
 
 
     <!--
@@ -1011,5 +1250,4 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
-
 </html>
