--- a/blog.html
+++ b/blog.html
@@ -300,7 +300,7 @@
             <ul class="social-list">
 
             <li>
-                <a href="#" class="social-link">
+                <a href="https://twitter.com/theasperteam?lang=en" class="social-link">
                 <ion-icon name="logo-twitter"></ion-icon>
 
                 <span class="span">Twitter</span>
@@ -308,7 +308,7 @@
             </li>
 
             <li>
-                <a href="#" class="social-link">
+                <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link">
                 <ion-icon name="logo-linkedin"></ion-icon>
 
                 <span class="span">LinkedIn</span>
@@ -316,7 +316,7 @@
             </li>
 
             <li>
-                <a href="#" class="social-link">
+                <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link">
                 <ion-icon name="logo-instagram"></ion-icon>
 
                 <span class="span">Instagram</span>
@@ -343,7 +343,7 @@
 
     <!-- Custom script -->
     <script src="blog.js"></script>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
 
     <!-- 
     - ionicon link
