--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="25x25" href="Assets/images/logo.png">
     <!------ css link ------>
-    <link rel="stylesheet" href="./css/login.css">
+    <link rel="stylesheet" href="/css/login.css">
     <!-------- fonts for login page -------->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -121,7 +121,7 @@
             signup(email.value, password.value)
         }
     </script>
-    <script src="./login.js"></script>
+    <script src="login.js"></script>
 </body>
 
 </html>
