--- a/index.html
+++ b/index.html
@@ -767,10 +767,6 @@
         </div>
       </section>
 
-
-
-
-
       <!-- 
         - #RECENT POST
       -->
@@ -1493,7 +1489,7 @@
   <!-- 
     - custom js link
   -->
-  <script src="/script.js"></script>
+  <script src="script.js"></script>
 
   <!-- 
     - ionicon link
