--- a/index.html
+++ b/index.html
@@ -80,15 +80,11 @@
           <ul class="link-list">
 
             <li>
-              <a href="#" class="navbar-bottom-link hover-1">Profile</a>
+              <a href="profile.html" class="navbar-bottom-link hover-1">Profile</a>
             </li>
 
             <li>
               <a href="#" class="navbar-bottom-link hover-1">Articles Saved</a>
-            </li>
-
-            <li>
-              <a href="#" class="navbar-bottom-link hover-1">Add New Post</a>
             </li>
 
             <li>
@@ -100,13 +96,11 @@
             </li>
 
             <li>
-              <a href="#" class="navbar-bottom-link hover-1">Sign Out</a>
+              <a href="login.html" class="navbar-bottom-link hover-1">Log In</a>
             </li>
 
           </ul>
-
         </div>
-
       </nav>
 
       <a href="login.html" class="btn btn-primary">Login</a>
