--- a/profile.html
+++ b/profile.html
@@ -79,15 +79,11 @@
             <ul class="link-list">
 
             <li>
-                <a href="#" class="navbar-bottom-link hover-1">Profile</a>
+                <a href="profile.html" class="navbar-bottom-link hover-1">Profile</a>
             </li>
 
             <li>
                 <a href="#" class="navbar-bottom-link hover-1">Articles Saved</a>
-            </li>
-
-            <li>
-                <a href="#" class="navbar-bottom-link hover-1">Add New Post</a>
             </li>
 
             <li>
@@ -99,14 +95,13 @@
             </li>
 
             <li>
-                <a href="#" class="navbar-bottom-link hover-1">Sign Out</a>
+                <a href="login.html" class="navbar-bottom-link hover-1">Log In</a>
             </li>
 
             </ul>
-
         </div>
-
         </nav>
+
 
         <a href="login.html" class="btn btn-primary">Login</a>
 
@@ -1241,7 +1236,8 @@
     <!--
     - custom js link
     -->
-    <script src="./profile.js"></script>
+    <script src="profile.js"></script>
+    <script src="script.js"></script>
 
     <!--
     - ionicon link
