--- a/profile.html
+++ b/profile.html
@@ -34,14 +34,14 @@
     <header class="header" data-header>
     <div class="container">
 
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
         <img src="Assets/images/logo.png" width="30" height="10" alt="logo">
         </a>
 
         <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
             <img src="Assets/images/logo.png" width="119" height="37" alt="logo">
             </a>
 
@@ -53,11 +53,11 @@
         <ul class="navbar-list">
 
             <li>
-            <a href="#home" class="navbar-link hover-1" data-nav-toggler>Home</a>
+            <a href="index.html" class="navbar-link hover-1" data-nav-toggler>Home</a>
             </li>
 
             <li>
-            <a href="#categories" class="navbar-link hover-1" data-nav-toggler>Categories</a>
+            <a href="index.html" class="navbar-link hover-1" data-nav-toggler>Categories</a>
             </li>
 
             <li>
@@ -215,8 +215,8 @@
                 <ul class="social-list">
 
                     <li class="social-item">
-                        <a href="#" class="social-link">
-                            <ion-icon name="logo-facebook"></ion-icon>
+                        <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link">
+                            <ion-icon name="logo-linkedin"></ion-icon>
                         </a>
                     </li>
 
@@ -227,7 +227,7 @@
                     </li>
 
                     <li class="social-item">
-                        <a href="#" class="social-link">
+                        <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link">
                             <ion-icon name="logo-instagram"></ion-icon>
                         </a>
                     </li>
@@ -1231,6 +1231,14 @@
 
     </div>
     </footer>
+
+    <!-- 
+    - #BACK TO TOP
+    -->
+
+    <a href="#top" class="back-top-btn" aria-label="back to top" data-back-top-btn>
+    <ion-icon name="arrow-up-outline" aria-hidden="true"></ion-icon>
+    </a>
 
 
     <!--
