--- a/index.html
+++ b/index.html
@@ -125,21 +125,21 @@
         <div class="carousel">
           <div class="img-slider">
         <div class="slide active">
-        <img src="Assets/images/c1.jpg" alt="">
+        <img src="Assets/images/featured-4.png" alt="">
         <div class="info">
           <h2>Slide 01</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div>
       <div class="slide">
-        <img src="Assets/images/c1.jpg" alt="">
+        <img src="Assets/images/featured-3.png" alt="">
         <div class="info">
           <h2>Slide 02</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         </div>
       </div>
       <div class="slide">
-        <img src="Assets/images/c1.jpg" alt="">
+        <img src="Assets/images/featured-5.png" alt="">
         <div class="info">
           <h2>Slide 03</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
