--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div class="carousel">
           <div class="img-slider">
         <div class="slide active">
-        <img src="Assets/images/featured-4.png" alt="">
+        <img src="Assets/images/c2.jpg" alt="">
         <div class="info">
           <h2>Slide 01</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -139,7 +139,7 @@
         </div>
       </div>
       <div class="slide">
-        <img src="Assets/images/featured-5.png" alt="">
+        <img src="Assets/images/c5.avif" alt="">
         <div class="info">
           <h2>Slide 03</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -210,7 +210,7 @@
           return;
         }
         repeater();
-      }, 10000);
+      }, 6100);
       }
       repeater();
     }
