--- a/index.html
+++ b/index.html
@@ -1438,7 +1438,7 @@
           <ul class="social-list">
 
             <li>
-                <a href="https://twitter.com/theasperteam?lang=en" class="social-link">
+                <a href="https://twitter.com/theasperteam?lang=en" class="social-link" target="_blank">
                 <ion-icon name="logo-twitter"></ion-icon>
 
                 <span class="span">Twitter</span>
@@ -1446,7 +1446,7 @@
             </li>
 
             <li>
-                <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link">
+                <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
 
                 <span class="span">LinkedIn</span>
@@ -1454,7 +1454,7 @@
             </li>
 
             <li>
-                <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link">
+                <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
 
                 <span class="span">Instagram</span>
