--- a/login.html
+++ b/login.html
@@ -31,9 +31,9 @@
                 <p>Step into our captivating blogosphere and indulge in a world of delightful stories and fascinating
                     content.</p>
                 <div class="social-icons">
-                    <a href="https://twitter.com/theasperteam?lang=en"><i class='bx bxl-twitter'></i></a>
-                    <a href="https://www.linkedin.com/company/theasperteam/mycompany/" ><i class='bx bxl-linkedin'></i></a>
-                    <a href="https://www.instagram.com/theasperteam/?hl=en"><i class='bx bxl-instagram'></i></a>
+                    <a href="https://twitter.com/theasperteam?lang=en" target="_blank"><i class='bx bxl-twitter'></i></a>
+                    <a href="https://www.linkedin.com/company/theasperteam/mycompany/" ><i class='bx bxl-linkedin' target="_blank"></i></a>
+                    <a href="https://www.instagram.com/theasperteam/?hl=en" target="_blank"><i class='bx bxl-instagram'></i></a>
                 </div>
             </div>
         </div>
@@ -119,9 +119,11 @@
             var email = document.getElementById("email")
             var password = document.getElementById("password")
             signup(email.value, password.value)
-        }
+        }    
     </script>
+    <script type="module" src="firebase_login.js"></script>
     <script src="login.js"></script>
+
 </body>
 
 </html>
