--- a/profile.html
+++ b/profile.html
@@ -1200,7 +1200,7 @@
             <ul class="social-list">
 
             <li>
-                <a href="https://twitter.com/theasperteam?lang=en" class="social-link">
+                <a href="https://twitter.com/theasperteam?lang=en" class="social-link" target="_blank">
                 <ion-icon name="logo-twitter"></ion-icon>
 
                 <span class="span">Twitter</span>
@@ -1208,7 +1208,7 @@
             </li>
 
             <li>
-                <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link">
+                <a href="https://www.linkedin.com/company/theasperteam/mycompany/" class="social-link" target="_blank">
                 <ion-icon name="logo-linkedin"></ion-icon>
 
                 <span class="span">LinkedIn</span>
@@ -1216,7 +1216,7 @@
             </li>
 
             <li>
-                <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link">
+                <a href="https://www.instagram.com/theasperteam/?hl=en" class="social-link" target="_blank">
                 <ion-icon name="logo-instagram"></ion-icon>
 
                 <span class="span">Instagram</span>
