Added relevant text

--- a/blog.html
+++ b/blog.html
@@ -171,8 +171,7 @@
             </a>
 
             <p class="footer-text">
-                When an unknown prnoto sans took a galley and scrambled it to make specimen book not only five When an
-                unknown prnoto sans took a galley and scrambled it to five centurie.
+                Our vision is to create a society of creative and dedicated minds to foster a positive work environment with the aim of encouraging the enthusiasts to gain expertise and exposure in different domains of development.
             </p>
 
             <p class="footer-list-title">Address</p>
