--- a/login.html
+++ b/login.html
@@ -43,18 +43,18 @@
             <div class="form-box login">
                 <a href="./index.html" class="back-btn-login"><i class='bx bx-arrow-back'></i></a>
 
-                <form action="#">
+                <form onsubmit="login(event)">
                     <h2>Sign In</h2>
 
                     <div class="input-box">
                         <span class="icon"><i class='bx bxs-envelope'></i></span>
-                        <input type="text" required>
+                        <input type="email" id="email2" required>
                         <label>Email</label>
                     </div>
 
                     <div class="input-box">
                         <span class="icon"><i class='bx bxs-lock-alt'></i></span>
-                        <input type="password" required>
+                        <input type="password" id="password2" required>
                         <label>Password</label>
                     </div>
 
