trial commit after clone again

--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
                   <h3 class="headline headline-3">
                     <a href="blog.html" class="card-title hover-2">
-                      Self-observation is the first step of inner unfolding
+                      Self-observation is the
                     </a>
                   </h3>
 
