--- a/index.html
+++ b/index.html
@@ -446,7 +446,7 @@
 
                   <h3 class="headline headline-3">
                     <a href="blog.html" class="card-title hover-2">
-                      Self-observation is the
+                      The Art of Designing Timeless Visual Masterpieces
                     </a>
                   </h3>
 
@@ -498,7 +498,7 @@
 
                   <h3 class="headline headline-3">
                     <a href="blog.html" class="card-title hover-2">
-                      Self-observation is the first step of inner unfolding
+                      Designing Unforgettable Rides and Attractions
                     </a>
                   </h3>
 
@@ -550,7 +550,7 @@
 
                   <h3 class="headline headline-3">
                     <a href="blog.html" class="card-title hover-2">
-                      Self-observation is the first step of inner unfolding
+                      Exploring the Natural Wonders of New Zealand
                     </a>
                   </h3>
 
@@ -602,7 +602,7 @@
 
                   <h3 class="headline headline-3">
                     <a href="blog.html" class="card-title hover-2">
-                      Self-observation is the first step of inner unfolding
+                      A Cosmic Symphony in the Night Sky
                     </a>
                   </h3>
 
