--- a/blog.html
+++ b/blog.html
@@ -21,14 +21,14 @@
     <header class="header" data-header>
     <div class="container">
 
-        <a href="#" class="logo">
+        <a href="index.html" class="logo">
         <img src="Assets/images/logo.png" width="30" height="10" alt="logo">
         </a>
 
         <nav class="navbar" data-navbar>
 
         <div class="navbar-top">
-            <a href="#" class="logo">
+            <a href="index.html" class="logo">
             <img src="Assets/images/logo.png" width="119" height="37" alt="logo">
             </a>
 
@@ -40,15 +40,15 @@
         <ul class="navbar-list">
 
             <li>
-            <a href="#home" class="navbar-link hover-1" data-nav-toggler>Home</a>
+            <a href="index.html" class="navbar-link hover-1" data-nav-toggler>Home</a>
             </li>
 
             <li>
-            <a href="#categories" class="navbar-link hover-1" data-nav-toggler>Categories</a>
+            <a href="index.html" class="navbar-link hover-1" data-nav-toggler>Categories</a>
             </li>
 
             <li>
-            <a href="#featured" class="navbar-link hover-1" data-nav-toggler>Featured Blogs</a>
+            <a href="index.html" class="navbar-link hover-1" data-nav-toggler>Featured Blogs</a>
             </li>
 
             <li>
