--- a/index.html
+++ b/index.html
@@ -127,29 +127,29 @@
         <div class="slide active">
         <img src="Assets/images/c2.jpg" alt="">
         <div class="info">
-          <h2>Slide 01</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h2>Around the world</h2>
+          <p>Take a look at all the latest updates around the world</p>
         </div>
       </div>
       <div class="slide">
         <img src="Assets/images/featured-3.png" alt="">
         <div class="info">
-          <h2>Slide 02</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h2>Mountains and Valleys</h2>
+          <p>Your guide to the most beautiful mountains and valleys around the world</p>
         </div>
       </div>
       <div class="slide">
         <img src="Assets/images/c5.avif" alt="">
         <div class="info">
-          <h2>Slide 03</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h2>Latest in tech</h2>
+          <p>Read to find out all the latest innovations in the world of tech</p>
         </div>
       </div>
       <div class="slide">
         <img src="Assets/images/c1.jpg" alt="">
         <div class="info">
-          <h2>Slide 04</h2>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+          <h2>The fading Stars</h2>
+          <p>Find out why the stars are fading and how are we responsible for it</p>
         </div>
       </div>
       
