--- a/login.html
+++ b/login.html
@@ -25,7 +25,7 @@
     <!------ login container-login -------->
     <div class="container-login">
         <div class="content">
-            <h2 class="logo"><img src="Assets/images/logo.png" alt="logo"></i><a href="/index.html">Asperia</a></h2>
+            <h2 class="logo"><img src="Assets/images/logo.png" alt="logo"></i><a href="index.html">Asperia</a></h2>
             <div class="text-sci">
                 <h2>Welcome!<br><span>To Our Blog Website.</h2>
                 <p>Step into our captivating blogosphere and indulge in a world of delightful stories and fascinating
