--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       <div class="slide">
         <img src="Assets/images/featured-3.png" alt="">
         <div class="info">
-          <h2>Mountains and Valleys</h2>
+          <h2>Peaks and Hallows</h2>
           <p>Your guide to the most beautiful mountains and valleys around the world</p>
         </div>
       </div>
